# matter-mcp

./: .copier-answers.yml  .env.example  .gitignore  .lychee.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  prek.toml  pyproject.toml  zensical.toml
.github/: actionlint.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docs.yml  mcp-registry-publish.yml  release.yml
.serena/: project.yml
docs/.overrides/partials/: comments.html
docs/reference/: api.md
scripts/: prek-autoupdate.sh
src/matter_mcp/: __init__.py  cli.py  client.py  server.py
tests/: conftest.py  test_integration.py  test_matter_mcp.py
